Viewport isn't updating Children hair particle on particle edit #66689

Closed
opened 2019-07-11 04:39:50 +02:00 by Jacob Ameran Athias Neto · 14 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.39

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-05 16:36, hash: 699193713f
Worked: (optional)

Short description of error
Viewport isn't updating Children hair particle when using any select tools.

Exact steps for others to reproduce the error
Create a object
Set on render panel on Hair to use Strip instead of Strand (if you are using eevee)
add hair particle ( I use only one hair particle)
add children simple (100) (any value still will show the issue)
On the view port change to particle edit
on the right panel (hotkey n) activate children for then to be displayed on the viewport.
to be able to select the strand set the selection mode to points (Top left corner)

If you grab any strand if any selective tool (no comb tool)
you will be able to move this main strand of the hair but children will stay frozen, unless you change the tool to comb and click in the viewport, then it will be updated.

Even if you delete the strand, the particles yet will be there until you change to any other tool and click on the viewport or if you go back to object mode.

image.png
image.png
image.png

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.39 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-05 16:36, hash: `699193713f` Worked: (optional) **Short description of error** Viewport isn't updating Children hair particle when using any select tools. **Exact steps for others to reproduce the error** Create a object Set on render panel on Hair to use Strip instead of Strand (if you are using eevee) add hair particle ( I use only one hair particle) add children simple (100) (any value still will show the issue) On the view port change to particle edit on the right panel (hotkey n) activate children for then to be displayed on the viewport. to be able to select the strand set the selection mode to points (Top left corner) If you grab any strand if any selective tool (no comb tool) you will be able to move this main strand of the hair but children will stay frozen, unless you change the tool to comb and click in the viewport, then it will be updated. Even if you delete the strand, the particles yet will be there until you change to any other tool and click on the viewport or if you go back to object mode. ![image.png](https://archive.blender.org/developer/F7588299/image.png) ![image.png](https://archive.blender.org/developer/F7588314/image.png) ![image.png](https://archive.blender.org/developer/F7588318/image.png)

Added subscriber: @jacobathias

Added subscriber: @jacobathias

#66842 was marked as duplicate of this issue

#66842 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm.
Undoing (even comb) will also keep the children in place...
(Pretty sure this has been reported before though, looking up the duplicate...)

Can confirm. Undoing (even comb) will also keep the children in place... (Pretty sure this has been reported before though, looking up the duplicate...)

Added subscribers: @fclem, @grosgood

Added subscribers: @fclem, @grosgood

Seen also in #65565 which lead to that "faux" bug report.
Note, in particular, @fclem closing comment on tagging.
A short video clip there illustrates the effect.

Seen also in #65565 which lead to that "faux" bug report. Note, in particular, @fclem closing comment on tagging. A short video clip there illustrates the effect.
Philipp Oeser self-assigned this 2019-07-11 15:06:55 +02:00

This issue was referenced by 439777f081

This issue was referenced by 439777f081ed9ee7ee0d5ea9042dc87bd2fd4b1a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Added subscriber: @Mephisto

Added subscriber: @Mephisto

Added subscriber: @BintangPratama

Added subscriber: @BintangPratama

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Hello, I'm still getting issues with Hair Children not being updating in viewport when in Particle Edit mode. Changing all the Children's setting like display amount or modifying clump curve are not reflecting in the viewport.
You need to turn ON and OFF Children option on Side Panel ( Tool / Options / Viewport Display / Children ) to be able seeing the update.

I've tested it on 2.80 official build and 2.81 alpha hash e8ffe25eb1 on Windows 10 with Graphic Card gtx970

Thanks !
HairChildren_ViewportUpdateIssue.jpg

Hello, I'm still getting issues with Hair Children not being updating in viewport when in Particle Edit mode. Changing all the Children's setting like display amount or modifying clump curve are not reflecting in the viewport. **You need to turn ON and OFF Children option on Side Panel** ( Tool / Options / Viewport Display / Children ) **to be able seeing the update.** I've tested it on 2.80 official build and 2.81 alpha hash e8ffe25eb1 on Windows 10 with Graphic Card gtx970 Thanks ! ![HairChildren_ViewportUpdateIssue.jpg](https://archive.blender.org/developer/F7669747/HairChildren_ViewportUpdateIssue.jpg)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

@BintangPratama : this report was about the trransform.
For the settings issue, we have another open report, see #69000, so will close this again, lets continue discussion in #69000...

@BintangPratama : this report was about the trransform. For the settings issue, we have another open report, see #69000, so will close this again, lets continue discussion in #69000...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66689
No description provided.