Fix T66689: Viewport isn't updating children hair particle on particle edit

Reviewers: fclem, brecht

Maniphest Tasks: T66689

Differential Revision: https://developer.blender.org/D5229